hide and show password feature add

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.passwordrecorder"
+        applicationId 'cn.kylin.passwordrecorder'
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
