--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0.4a"
+        versionName "1.0.4b"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
